--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="about-text">
-          <h4>Réseau de neurones récurrent (RNN)</h4>
+          <h4>Constitution du message chiffré</h4>
           <p>Dans l'exemple de chiffrement homomorphique par moduli polynomiaux cité dans la partie précédente et expliqué plus en détail <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">ici</a>, on peut voir que le chiffrement homomorphique utilise une clé privée (<i>s</i> dans l'équation ci-contre), un masque changeant à chaque chiffrement, défini à partir d'un polynôme <i>u</i> tiré aléatoirement, une clé publique correspondant à la clé privée, et du bruit.</p>
           <p>Dans l'équation ci-contre, le message correspond au polynôme noté <i>m</i>, t est l'entier modulo lequel sont définis les coefficients polynomiaux du message à chiffrer, et q l'entier modulo lequel sont définis les coefficients de la clé publique. <i>u</i> et <i>s</i> prennent des coefficients égaux à -1, 0 ou 1, et les erreurs des coefficients faibles définis par des lois gaussiennes relativement à <i>q</i>. </p>
           <p>Finalement, le texte chiffré est constitué des deux polynômes présentés ci-contre. </p>
