--- a/index.html
+++ b/index.html
@@ -377,6 +377,14 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <div class="about-text">
+          <p>Ces résultats montrent que le chiffrement homomorphique étudié sera efficace seulement pour les opérations linéaires. En pratique, c'est le cas pour tous les chiffrements homomorphiques. Ils seront donc particulièrement efficace sur la partie convolutive du réseau de neurones.</p>
+          </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
