--- a/index.html
+++ b/index.html
@@ -385,6 +385,12 @@
       </div>
     </div>
 
+    <div class="space"></div>
+    <div class="subsection-title text-center center">
+      <h3>Utilisation des circuits brouillés sur les opérations non linéaires</h3>
+    </div>
+    <div class="space"></div>
+
   </div>
 </div>
 
