--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
             </a>
           </div>
           <div class="hover-bg">
-            <a href="img/gazelle/garbled.png" rel="prettyPhoto">
-              <img src="img/gazelle/garbled.png" class="img-responsive">
+            <a href="img/gazelle/garbled.jpg" rel="prettyPhoto">
+              <img src="img/gazelle/garbled.jpg" class="img-responsive">
             </a>
           </div>
       </div>
