--- a/index.html
+++ b/index.html
@@ -389,9 +389,10 @@
     <div class="subsection-title text-center center">
       <h3>Utilisation des circuits brouillés sur les opérations non linéaires</h3>
       <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-4 web"></div>
         <div class="col-sm-6 col-md-6 col-lg-4 web">
             <a href="img/gazelle/circuits_brouilles.png" rel="prettyPhoto">
-              <img src="img/gazelle/circuits_brouilles.png" class="img-responsive" width=50%>
+              <img src="img/gazelle/circuits_brouilles.png" class="img-responsive">
             </a>
         </div>
       </div>
