--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
     <div class="space"></div>
     <div class="subsection-title text-center center">
       <h3>Utilisation des circuits brouillés sur les opérations non linéaires</h3>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-4 web">
             <a href="img/gazelle/circuits_brouilles.png" rel="prettyPhoto">
               <img src="img/gazelle/circuits_brouilles.png" class="img-responsive">
             </a>
         </div>
-      </div> -->
+      </div>
     </div>
     <div class="space"></div>
     <div class="row">
