--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
       </div>
     </div>
 
+    <div class="space"></div>
+    <div class="subsection-title text-center center">
+      <h3>Combinaison du chiffrement homomorphique et des circuits brouillés dans le protocole Gazelle</h3>
+    </div>
+    <div class="space"></div>
+
   </div>
 </div>
 
