--- a/index.html
+++ b/index.html
@@ -422,6 +422,20 @@
       <h3>Combinaison du chiffrement homomorphique et des circuits brouillés dans le protocole Gazelle</h3>
     </div>
     <div class="space"></div>
+    <div class="row">
+      <div class="col-md-7">
+        <div class="about-text">
+            <p>Dans le protocole Gazelle, des allers-retours sont effectués entre serveur Cloud et serveur local à chaque opération. Les opérations linéaires sont réalisées par chiffrement homomorphique, tandis que les opérations non-linéaires sont confiées à des circuits brouillés, sans jamais envoyer les données au serveur Cloud. De plus, chaque serveur chiffre tout avec une clé générée en début de processus, et le serveur Cloud envoie la sienne à l'autre en fin de course, comme le montre le schéma de synthèse ci-contre.</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-5 web">
+          <div class="hover-bg">
+            <a href="img/gazelle/gazelle.png" rel="prettyPhoto">
+              <img src="img/gazelle/gazelle.png" class="img-responsive">
+            </a>
+          </div>
+      </div>
+    </div>
 
   </div>
 </div>
