--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="#services-section" class="page-scroll">Stratégies</a></li>
         <li><a href="#encryption-section" class="page-scroll">Chiffrements</a></li>
         <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
-        <li><a href="#about-section" class="page-scroll">à propos</a></li>
+        <li><a href="#ccl-section" class="page-scroll">Synthèse</a></li>
         <li><a href="#team-section" class="page-scroll">Références</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
