--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@
     <div class="space"></div>
     <div class="subsection-title text-center center">
       <h3>Utilisation des circuits brouillés sur les opérations non linéaires</h3>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-4 web">
         <div class="col-sm-6 col-md-6 col-lg-4 web">
             <a href="img/gazelle/circuits_brouilles.png" rel="prettyPhoto">
               <img src="img/gazelle/circuits_brouilles.png" class="img-responsive">
             </a>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="space"></div>
     <div class="row">
@@ -433,6 +433,26 @@
             <a href="img/gazelle/gazelle.png" rel="prettyPhoto">
               <img src="img/gazelle/gazelle.png" class="img-responsive">
             </a>
+          </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- Concluding section -->
+<div id="ccl-section">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Synthèse</h2>
+      <hr>
+      <div class="clearfix"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="about-text">
+            <p>Une application de réseaux de neurones dans le Cloud peut être sécurisée à de nombreux niveau, mais l'on ne pourra jamais garantir totalement l'accès aux données. Il est donc utile de disposer d'un protocole comme Gazelle pour permettre le traitement sans envoi des données.</p>
           </div>
       </div>
     </div>
