--- a/index.html
+++ b/index.html
@@ -447,12 +447,12 @@
       <h2>Synthèse</h2>
       <hr>
       <div class="clearfix"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+      <p>Une application de réseaux de neurones dans le Cloud peut être sécurisée à de nombreux niveau, mais l'on ne pourra jamais garantir totalement l'accès aux données. Il est donc utile de disposer d'un protocole comme Gazelle pour permettre le traitement sans envoi des données.</p>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="about-text">
-            <p>Une application de réseaux de neurones dans le Cloud peut être sécurisée à de nombreux niveau, mais l'on ne pourra jamais garantir totalement l'accès aux données. Il est donc utile de disposer d'un protocole comme Gazelle pour permettre le traitement sans envoi des données.</p>
+            <p>Le protocole Gazelle présente l'avantage d'utiliser plusieurs types de chiffrement spécialisés dans les opérations linéaires ou non linéaires ce qui rend les temps de calculs plus courts que les opérations effectuées par le passé, et cette utilisation exploitable. D'après les auteurs de la publication, on gagne trois ordres de grandeurs en temps de calcul et deux ordres de grandeurs en largeur de bande réseau nécessaire par rapport aux approches purement homomorphiques.</p>
           </div>
       </div>
     </div>
