--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li><a href="#encryption-section" class="page-scroll">Chiffrements</a></li>
         <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
         <li><a href="#ccl-section" class="page-scroll">Synthèse</a></li>
-        <li><a href="#team-section" class="page-scroll">Références</a></li>
+        <li><a href="#works-section" class="page-scroll">Références</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -451,7 +451,7 @@
       <p>Le protocole Gazelle présente l'avantage d'utiliser plusieurs types de chiffrement spécialisés dans les opérations linéaires ou non linéaires ce qui rend les temps de calculs plus courts que les opérations effectuées par le passé, et cette utilisation exploitable. D'après les auteurs de la publication, on gagne trois ordres de grandeurs en temps de calcul et deux ordres de grandeurs en largeur de bande réseau nécessaire par rapport aux approches purement homomorphiques.</p>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <div class="about-text">
 
           </div>
@@ -465,11 +465,30 @@
 <div id="works-section">
   <div class="container"> <!-- Container -->
     <div class="section-title text-center center">
-      <h2>Our Portfolio</h2>
+      <h2>Références</h2>
       <hr>
       <div class="clearfix"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+      <p>Ci-après, une liste des références qui permettront au lecteur d'approfondir les explications données ci-avant sur une sélection de pages à contenu pertinent et synthétique.</p>
     </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="about-text">
+          <p>Pour bien appréhender les risques liés au Cloud, un rapport de la Cloud Security Alliance : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&cad=rja&uact=8&ved=2ahUKEwiKg--SiI3hAhUZ8uAKHUMZA7oQFjAFegQIChAC&url=https%3A%2F%2Fdownloads.cloudsecurityalliance.org%2Fassets%2Fresearch%2Ftop-threats%2Ftreacherous-12-top-threats.pdf&usg=AOvVaw3Dqd22S6kY41OpIzpqI1GE">Treacherous top 12 threats</a>.</p>
+          <p>Pour se tenir informé en matière de sécurité du Cloud : <a href="https://guidesforcloudsecurity.com/all-articles/">Guides for Cloud Security</a>.</p>
+          <p>Sur le cryptage homomorphique : <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">blog de n1 analytics</a>.</p>
+          <p>Sur les circuit brouillés, explication didactique sur stackoverflow : <a href="https://crypto.stackexchange.com/questions/37991/what-exactly-is-a-garbled-circuit">par Mikero</a>.</p>
+          <p>Présentation générale du protocole Gazelle : <a href="http://news.mit.edu/2018/more-efficient-security-cloud-based-machine-learning-0817"> article du MIT</a>.</p>
+          <p>Publication du protocole Gazelle par Chiraag Juvekar, Vinod Vaikuntanathan et Anantha Chandrakasan : <a href="https://arxiv.org/abs/1801.05507">Gazelle: A Low Latency Framework for Secure Neural Network Inference</a>.</p>
+          <p>Lien vers mes slides de présentation sur le sujet : <a href="https://www.canva.com/design/DADS0KKFQag/sPDABb3sOQgqGv_ASkieiw/view?utm_content=DADS0KKFQag&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"> présentation du premier mars 2019</a>.</p>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
     <div class="categories">
       <ul class="cat">
         <li>
