--- a/index.html
+++ b/index.html
@@ -474,13 +474,14 @@
     <div class="row">
       <div class="col-md-12">
         <div class="about-text">
-          <p>Pour bien appréhender les risques liés au Cloud, un rapport de la Cloud Security Alliance : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&cad=rja&uact=8&ved=2ahUKEwiKg--SiI3hAhUZ8uAKHUMZA7oQFjAFegQIChAC&url=https%3A%2F%2Fdownloads.cloudsecurityalliance.org%2Fassets%2Fresearch%2Ftop-threats%2Ftreacherous-12-top-threats.pdf&usg=AOvVaw3Dqd22S6kY41OpIzpqI1GE">Treacherous top 12 threats</a>.</p>
-          <p>Pour se tenir informé en matière de sécurité du Cloud : <a href="https://guidesforcloudsecurity.com/all-articles/">Guides for Cloud Security</a>.</p>
-          <p>Sur le cryptage homomorphique : <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">blog de n1 analytics</a>.</p>
-          <p>Sur les circuit brouillés, explication didactique sur stackoverflow : <a href="https://crypto.stackexchange.com/questions/37991/what-exactly-is-a-garbled-circuit">par Mikero</a>.</p>
-          <p>Présentation générale du protocole Gazelle : <a href="http://news.mit.edu/2018/more-efficient-security-cloud-based-machine-learning-0817"> article du MIT</a>.</p>
-          <p>Publication du protocole Gazelle par Chiraag Juvekar, Vinod Vaikuntanathan et Anantha Chandrakasan : <a href="https://arxiv.org/abs/1801.05507">Gazelle: A Low Latency Framework for Secure Neural Network Inference</a>.</p>
-          <p>Lien vers mes slides de présentation sur le sujet : <a href="https://www.canva.com/design/DADS0KKFQag/sPDABb3sOQgqGv_ASkieiw/view?utm_content=DADS0KKFQag&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"> présentation du premier mars 2019</a>.</p>
+          <p>Pour bien appréhender les <b>risques liés au Cloud</b>, un rapport de la Cloud Security Alliance : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&cad=rja&uact=8&ved=2ahUKEwiKg--SiI3hAhUZ8uAKHUMZA7oQFjAFegQIChAC&url=https%3A%2F%2Fdownloads.cloudsecurityalliance.org%2Fassets%2Fresearch%2Ftop-threats%2Ftreacherous-12-top-threats.pdf&usg=AOvVaw3Dqd22S6kY41OpIzpqI1GE">Treacherous top 12 threats</a>.</p>
+          <p>Pour se tenir informé en matière de <b>sécurité du Cloud</b> : <a href="https://guidesforcloudsecurity.com/all-articles/">Guides for Cloud Security</a>.</p>
+          <p>Sur le <b>cryptage homomorphique</b> : <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">blog de n1 analytics</a>.</p>
+          <p>Sur les <b>circuit brouillés</b>, explication didactique sur stackoverflow : <a href="https://crypto.stackexchange.com/questions/37991/what-exactly-is-a-garbled-circuit">par Mikero</a>.</p>
+          <p>Présentation générale du <b>protocole Gazelle</b> : <a href="http://news.mit.edu/2018/more-efficient-security-cloud-based-machine-learning-0817"> article du MIT</a>.</p>
+          <p>Publication du <b>protocole Gazelle</b> par Chiraag Juvekar, Vinod Vaikuntanathan et Anantha Chandrakasan : <a href="https://arxiv.org/abs/1801.05507">Gazelle: A Low Latency Framework for Secure Neural Network Inference</a>.</p>
+          <p>Lien vers mes <b>slides</b> de présentation sur le sujet : <a href="https://www.canva.com/design/DADS0KKFQag/sPDABb3sOQgqGv_ASkieiw/view?utm_content=DADS0KKFQag&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"> présentation du premier mars 2019</a>.</p>
+          <p>Lien vers mon compte <b>Twitter</b> dédié : <a href="https://twitter.com/EclNs">EclNs</a>.</p>
 
         </div>
       </div>
