--- a/index.html
+++ b/index.html
@@ -474,15 +474,16 @@
     <div class="row">
       <div class="col-md-12">
         <div class="about-text">
-          <p>Pour bien appréhender les <b>risques liés au Cloud</b>, un rapport de la Cloud Security Alliance : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&cad=rja&uact=8&ved=2ahUKEwiKg--SiI3hAhUZ8uAKHUMZA7oQFjAFegQIChAC&url=https%3A%2F%2Fdownloads.cloudsecurityalliance.org%2Fassets%2Fresearch%2Ftop-threats%2Ftreacherous-12-top-threats.pdf&usg=AOvVaw3Dqd22S6kY41OpIzpqI1GE">Treacherous top 12 threats</a>.</p>
-          <p>Pour se tenir informé en matière de <b>sécurité du Cloud</b> : <a href="https://guidesforcloudsecurity.com/all-articles/">Guides for Cloud Security</a>.</p>
-          <p>Sur le <b>cryptage homomorphique</b> : <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">blog de n1 analytics</a>.</p>
-          <p>Sur les <b>circuit brouillés</b>, explication didactique sur stackoverflow : <a href="https://crypto.stackexchange.com/questions/37991/what-exactly-is-a-garbled-circuit">par Mikero</a>.</p>
-          <p>Présentation générale du <b>protocole Gazelle</b> : <a href="http://news.mit.edu/2018/more-efficient-security-cloud-based-machine-learning-0817"> article du MIT</a>.</p>
-          <p>Publication du <b>protocole Gazelle</b> par Chiraag Juvekar, Vinod Vaikuntanathan et Anantha Chandrakasan : <a href="https://arxiv.org/abs/1801.05507">Gazelle: A Low Latency Framework for Secure Neural Network Inference</a>.</p>
-          <p>Lien vers mes <b>slides</b> de présentation sur le sujet : <a href="https://www.canva.com/design/DADS0KKFQag/sPDABb3sOQgqGv_ASkieiw/view?utm_content=DADS0KKFQag&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"> présentation du premier mars 2019</a>.</p>
-          <p>Lien vers mon compte <b>Twitter</b> dédié : <a href="https://twitter.com/EclNs">EclNs</a>.</p>
-
+          <ul>
+            <li>Pour bien appréhender les <b>risques liés au Cloud</b>, un rapport de la Cloud Security Alliance : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=6&cad=rja&uact=8&ved=2ahUKEwiKg--SiI3hAhUZ8uAKHUMZA7oQFjAFegQIChAC&url=https%3A%2F%2Fdownloads.cloudsecurityalliance.org%2Fassets%2Fresearch%2Ftop-threats%2Ftreacherous-12-top-threats.pdf&usg=AOvVaw3Dqd22S6kY41OpIzpqI1GE">Treacherous top 12 threats</a>.</li>
+            <li>Pour se tenir informé en matière de <b>sécurité du Cloud</b> : <a href="https://guidesforcloudsecurity.com/all-articles/">Guides for Cloud Security</a>.</li>
+            <li>Sur le <b>cryptage homomorphique</b> : <a href="https://blog.n1analytics.com/homomorphic-encryption-illustrated-primer/">blog de n1 analytics</a>.</li>
+            <li>Sur les <b>circuit brouillés</b>, explication didactique sur stackoverflow : <a href="https://crypto.stackexchange.com/questions/37991/what-exactly-is-a-garbled-circuit">par Mikero</a>.</li>
+            <li>Présentation générale du <b>protocole Gazelle</b> : <a href="http://news.mit.edu/2018/more-efficient-security-cloud-based-machine-learning-0817"> article du MIT</a>.</li>
+            <li>Publication du <b>protocole Gazelle</b> par Chiraag Juvekar, Vinod Vaikuntanathan et Anantha Chandrakasan : <a href="https://arxiv.org/abs/1801.05507">Gazelle: A Low Latency Framework for Secure Neural Network Inference</a>.</li>
+            <li>Lien vers mes <b>slides</b> de présentation sur le sujet : <a href="https://www.canva.com/design/DADS0KKFQag/sPDABb3sOQgqGv_ASkieiw/view?utm_content=DADS0KKFQag&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"> présentation du premier mars 2019</a>.</li>
+            <li>Lien vers mon compte <b>Twitter</b> dédié : <a href="https://twitter.com/EclNs">EclNs</a>.</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -490,7 +491,7 @@
 
 
 
-    <div class="categories">
+    <!-- <div class="categories">
       <ul class="cat">
         <li>
           <ol class="type">
@@ -594,11 +595,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 <!-- About Section -->
-<div id="about-section">
+<!-- <div id="about-section">
   <div class="container">
     <div class="section-title text-center center">
       <h2>About Us</h2>
@@ -620,9 +621,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Achievements Section -->
-<div id="achievements" class="section dark-bg">
+<!-- <div id="achievements" class="section dark-bg">
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-3">
@@ -647,9 +648,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Team Section -->
-<div id="team-section" class="text-center">
+<!-- <div id="team-section" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>Meet the Team</h2>
@@ -695,9 +696,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Contact Section -->
-<div id="contact-section" class="text-center">
+<!-- <div id="contact-section" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>Contact Us</h2>
@@ -744,18 +745,18 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
 </div>
 <div id="social-section">
   <div class="container">
     <div class="social">
       <ul>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
+        <li><a href="https://twitter.com/EclNs"><i class="fa fa-twitter"></i></a></li>
+        <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+        <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
+        <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
+        <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
       </ul>
     </div>
   </div>
@@ -779,7 +780,7 @@
 <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
 <script type="text/javascript" src="js/jquery.isotope.js"></script>
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-<script type="text/javascript" src="js/contact_me.js"></script>
+<!-- <script type="text/javascript" src="js/contact_me.js"></script> -->
 
 <!-- Javascripts
     ================================================== -->
