--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="#gazelle-section" class="page-scroll">GAZELLE</a></li>
         <li><a href="#ccl-section" class="page-scroll">Synthèse</a></li>
         <li><a href="#works-section" class="page-scroll">Références</a></li>
-        <li><a href="#contact-section" class="page-scroll">Contact</a></li>
+        <!-- <li><a href="#contact-section" class="page-scroll">Contact</a></li> -->
       </ul>
     </div>
     <!-- /.navbar-collapse -->
