--- a/index.html
+++ b/index.html
@@ -138,40 +138,40 @@
   <div class="container">
     <div class="space"></div>
     <div class="row">
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Usurpation d'identifiants & d'accès</h4>
         <p>Listée comme la faille la plus probablement utilisée, l'usurpation d'identifiant correspond notamment à une vulnérabilité humaine de problème de gestion de mots-de-passe difficile à contrôler.</p>
         <p>L'usurpation d'accès contitue également une faille classique.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Vol de données</h4>
         <p>Qui met ses données sur le Cloud n'est pas à l'abris d'une attaque donnant accès aux données personnelles qui y sont stockées.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Perte de données</h4>
         <p>Un accident peut entraîner la suppression des données stockées sur le Cloud, en entraînant une perte si le backup n'est pas suffisant. De même, si les données sont cryptées pour être stockées sur le Cloud, et que l'utilisateur perd sa clé, les données seront perdues.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Interfaces et API</h4>
         <p>Les interfaces utilisateurs et API du Cloud consituent la seule partie applicative accessible depuis des adresses IP extérieures et seront donc particulitèrement visées par les attaques sur le Cloud.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-gears"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Endpoints</h4>
         <p>De même, il faut sécuriser tous les points d'accès au Cloud de manière à ce qu'aucun individu extérieur ne puisse y accéder, par exemple en demandant l'utilisation d'un VPN.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-rocket"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Denial-of-Service</h4>
         <p>Ces attaques arrivent lorsqu'un agent extérieur mal-intentionné surcharge le système de demandes jusqu'à ce que celui-ci cesse de répondre sous la charge. Ce ne sont pas les attaques les plus fréquentes, mais elles sont en hausse sur les hébergeurs de Cloud. Ce sont un exemple d'attaque sur les firewalls.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Failles de firewalls</h4>
         <p>Les firewalls d'un système ont pour rôle de réguler les demandes arrivant sur la machine, et doivent donc pouvoir détecter celles qui tentent d'outrepasser ce contrôle en scannant tous les ports, envoyant des requêtes erronnées en espérant qu'elles soient reconstituées, tentent de se faire passer pour des requêtes intérieures au domaine du firewalls, ou surcharger la machine (DoS), entre autres.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Système</h4>
         <p>Les attaques sur le système correspondent à l'exploitation de bugs dans les programmes qu'ils utilisent : kernels, libraries et outils d'exploitation. Avec le Cloud, les systèmes d'utilisateurs distincts peuvent être mis à proximité ce qui renforce cette vulnérabilité.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-line-chart"></i>
+      <div class="col-md-3 col-sm-6 col-lg-3 service"> <i class="fa fa-cloud"></i>
         <h4>Attaque provenant d'un agent interne</h4>
         <p>Le risque d'une attaque ou d'un vol de données de la part d'un agent interne au groupe des utilisateur ou provenant de l'hôte n'est pas à négliger, d'autant plus qu'il est difficile de s'en prémunir si ce n'est par une gestion stricte des accès en interne. Cependant, l'utilisateur du Cloud n'a pas la main sur l'organisation humaine côté hôte.</p>
       </div>
@@ -195,11 +195,11 @@
         <h4>Multi-Cloud</h4>
         <p>Une solution très simple pour améliorer la sécurité d'une implémentation Cloud, outre la privatisation du serveur de stockage, sera d'adopter une répartition chez plusieurs hébergeurs pour ne pas exposer toutes ses données en même temps et de la même manière. </p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-gears"></i>
         <h4>Chiffrement</h4>
         <p>Ensuite, une autre solution de sécurisation évidente est le cryptage des données stockées sur nuage. Même si le cryptage ne suffit pas pouvant être décrypté avec des forces de calcul suffisamment élevée, il ajoute une difficulté supplémentaire à la lecture d'informations confidentielles. Différents types de chiffrements sont présentés dans la section suivante.</p>
       </div>
-      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-desktop"></i>
+      <div class="col-md-3 col-sm-6 col-lg-4 service"> <i class="fa fa-scissors"></i>
         <h4>Séparation des données de leur traitement</h4>
         <p>Dans le cas d'une utilisation du Cloud à des fins de machine learning par réseaux de neurones, on peut séparer le processus d'apprentissage des données et donc ne pas les dévoiler en les gardant sur un serveur entièrement contrôlé. Le protocole Gazelle qui met ce schéma en place pour des réseaux RNN (réseaux de neurones récurrents) est expliqué plus en détail ci-après.</p>
       </div>
